docs: completed phase 1-4 for analytics domain DDD refactoring and fixed test compile error